--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -17,7 +17,44 @@ html
 // Remove default margin.
 body
   margin: 0
-  background: rgb(0, 0, 50)
+
+.container
+  background: rgb(20, 20, 100)
+  background: linear-gradient(to bottom, rgba(20, 20, 100, 1) 12%, rgba(255, 255, 255, 1) 80%), linear-gradient(rgba(0, 100, 0, 1), rgba(0, 100, 0, 1))
+  padding-top: 60px
+
+  // &:after
+  //   content: ""
+  //   // background: url(image.jpg)
+  //   // opacity: 0.4
+  //   background: red
+  //   top: 0
+  //   left: 0
+  //   bottom: 0
+  //   right: 0
+  //   position: absolute 
+  //   z-index: -1
+
+
+
+// div
+//   width: 200px
+//   height: 200px
+//   display: block
+//   position: relative
+
+// div::after
+//   content: ""
+//   background: url(image.jpg)
+//   opacity: 0.5
+//   top: 0
+//   left: 0
+//   bottom: 0
+//   right: 0
+//   position: absolute
+//   z-index: -1
+
+
 
 .name
   background: rgb(255, 255, 255)
@@ -26,7 +63,7 @@ body
   width: 400px
 
 .main
-  background: rgb(200, 200, 255)
+  background: rgb(255, 255, 255)
   height: 600px
   margin: 0 auto
   width: 800px
@@ -254,6 +291,5 @@ sup
 sub
   bottom: -0.25em
 
-//this is a test?
 
 //! normalize.css v2.1.1 | MIT License | git.io/normalize
