--- a/styles/main.css
+++ b/styles/main.css
@@ -9,21 +9,42 @@ body {
   margin: 0; }
 
 .container {
-  background: #141464;
-  background: linear-gradient(to bottom, #141464 12%, white 80%), linear-gradient(darkgreen, darkgreen);
+  background: linear-gradient(to bottom, rgba(0, 0, 80, 0.8) 5%, white 50%), url("../img/wetsnow.png");
   padding-top: 60px; }
 
-.name {
+header {
   background: white;
-  height: 200px;
+  background: url("../img/freshsnow.png");
   margin: 0 auto;
   width: 400px; }
+  header a {
+    display: block;
+    height: 120px;
+    padding-top: 50px; }
+  header h1, header h2 {
+    margin: 10px 0;
+    text-align: center; }
 
 .main {
   background: white;
-  height: 600px;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), white), url("../img/freshsnow.png");
+  border-top: 1px solid #000064;
+  height: 800px;
   margin: 0 auto;
   width: 800px; }
+
+header, .main {
+  border-radius: 5px 5px 0 0; }
+
+.offset {
+  border: 1px solid #000064;
+  border-bottom-color: transparent;
+  box-shadow: 0 -1px 50px 0 rgba(0, 0, 100, 0.5); }
+
+footer {
+  background: url("../img/drawmount.png") bottom center no-repeat;
+  background-size: 100% auto;
+  height: 600px; }
 
 .group {
   *zoom: 1; }
@@ -101,10 +122,12 @@ audio:not([controls]) {
 [hidden] {
   display: none; }
 
-a:focus {
-  outline: thin dotted; }
-a:active, a:hover {
-  outline: 0; }
+a {
+  text-decoration: none; }
+  a:focus {
+    outline: thin dotted; }
+  a:active, a:hover {
+    outline: 0; }
 
 ul, ol, li {
   list-style: none;
