--- a/styles/main.css
+++ b/styles/main.css
@@ -9,37 +9,31 @@ body {
   margin: 0; }
 
 .container {
+  background: #000064;
   background: linear-gradient(to bottom, rgba(0, 0, 80, 0.8) 5%, white 50%), url("../img/wetsnow.png");
   padding-top: 60px; }
 
 header {
-  background: white;
-  background: url("../img/freshsnow.png");
   margin: 0 auto;
-  width: 400px; }
+  max-width: 500px;
+  width: 50%; }
   header a {
+    background: url("../img/freshsnow.png"), linear-gradient(to bottom, white, white);
+    border: 1px solid #000064;
+    border-bottom-color: transparent;
+    border-radius: 30px 30px 0 0;
+    box-shadow: 0 -1px 50px 0 rgba(0, 0, 100, 0.8);
     display: block;
-    height: 120px;
-    padding-top: 50px; }
-  header h1, header h2 {
-    margin: 10px 0;
-    text-align: center; }
+    padding: 20px 0; }
 
 .main {
-  background: white;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), white), url("../img/freshsnow.png");
-  border-top: 1px solid #000064;
+  border-radius: 30px 30px 0 0;
+  border-top: 1px solid rgba(0, 0, 100, 0.2);
+  box-shadow: 0 -10px 50px -25px #000064;
   height: 800px;
   margin: 0 auto;
-  width: 800px; }
-
-header, .main {
-  border-radius: 5px 5px 0 0; }
-
-.offset {
-  border: 1px solid #000064;
-  border-bottom-color: transparent;
-  box-shadow: 0 -1px 50px 0 rgba(0, 0, 100, 0.5); }
+  width: 80%; }
 
 footer {
   background: url("../img/drawmount.png") bottom center no-repeat;
@@ -125,9 +119,16 @@ audio:not([controls]) {
 a {
   text-decoration: none; }
   a:focus {
-    outline: thin dotted; }
+    outline: thin dotted;
+    color: rgba(0, 0, 100, 0.5); }
   a:active, a:hover {
     outline: 0; }
+  a:active {
+    color: rgba(0, 0, 100, 0.5); }
+  a:hover {
+    color: rgba(0, 0, 100, 0.7); }
+  a:visited {
+    color: #000064; }
 
 ul, ol, li {
   list-style: none;
@@ -138,9 +139,30 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+@font-face {
+  font-family: "Riesling";
+  src: url("../fonts/riesling.ttf"); }
+
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
+  font-size: 5em; }
+
+h2 {
+  position: relative;
+  left: -40px; }
+
+h3 {
+  font-weight: 400; }
+
+h1, h2 {
+  font-weight: 600; }
+
+h2, h3 {
+  font-size: 2em; }
+
+h1, h2, h3 {
+  line-height: 1em;
+  margin: 0;
+  text-align: center; }
 
 abbr[title] {
   border-bottom: 1px dotted; }
@@ -173,14 +195,5 @@ q {
 small {
   font-size: 80%; }
 
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sup {
-  top: -0.5em; }
-
-sub {
-  bottom: -0.25em; }
+header {
+  font-family: "Riesling", cursive; }
