--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -1,5 +1,7 @@
 // ~~~~~~~~~~BASE~~~~~~~~~~
 
+$blue: rgba(0, 0, 100, 1)
+
 html
   // Prevent system color scheme's background color being used in Firefox, IE, and Opera.
   background: #fff
@@ -20,40 +22,34 @@ body
   
 
 .container
-  // background: rgb(0, 0, 100)
+  background: rgb(0, 0, 100)
   background: linear-gradient(to bottom, rgba(0, 0, 80, .8) 5%, rgba(255, 255, 255, 1) 50%), url('../img/wetsnow.png')
-  // background: linear-gradient(to bottom, rgba(0, 0, 80, .8) 10%, rgba(255, 255, 255, .1) 60%)
   padding-top: 60px
 
 header
-  background: rgb(255, 255, 255)
-  background: url('../img/freshsnow.png')
   margin: 0 auto
-  width: 400px
+  // margin-bottom: -1px
+  max-width: 500px
+  width: 50%
   a
+    background: url('../img/freshsnow.png'), linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 1))
+    border: 1px solid rgb(0, 0, 100)
+    border-bottom-color: transparent
+    border-radius: 30px 30px 0 0
+    box-shadow: 0 -1px 50px 0 fade-out($blue, .2)
     display: block
-    height: 120px
-    padding-top: 50px
+    padding: 20px 0
     // margin-bottom: -1px
-  h1, h2
-    margin: 10px 0
-    text-align: center
 
 .main
-  background: rgb(255, 255, 255)
   background: linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(255, 255, 255, 1)),url('../img/freshsnow.png')
-  border-top: 1px solid rgb(0, 0, 100)
+  border-radius: 30px 30px 0 0
+  border-top: 1px solid fade-out($blue, .8)
+  box-shadow: 0 -10px 50px -25px fade-out($blue, 0)
   height: 800px
   margin: 0 auto
-  width: 800px
-
-header, .main
-  border-radius: 5px 5px 0 0
-
-.offset
-  border: 1px solid rgb(0, 0, 100)
-  border-bottom-color: transparent
-  box-shadow: 0 -1px 50px 0 rgba(0, 0, 100, .5)
+  // overflow: hidden
+  width: 80%
 
 footer
   background: url('../img/drawmount.png') bottom center no-repeat
@@ -202,10 +198,20 @@ a
   // Address `outline` inconsistency between Chrome and other browsers.
   &:focus
     outline: thin dotted
+    color: fade-out($blue, .5)
 
   // Improve readability when focused and also mouse hovered in all browsers.
   &:active, &:hover
     outline: 0
+
+  &:active
+    color: fade-out($blue, .5)
+
+  &:hover
+    color: fade-out($blue, .3)
+
+  &:visited
+    color: fade-out($blue, 0)
 
 
 // ~~~~~~~~~~LISTS~~~~~~~~~~
@@ -226,10 +232,32 @@ table
 
 // ~~~~~~~~~~TYPOGRAPHY~~~~~~~~~~
 
-// Address variable `h1` font-size and margin within `section` and `article` contexts in Firefox 4+, Safari 5, and Chrome.
+
+@font-face
+  font-family: 'Riesling'
+  src: url('../fonts/riesling.ttf')
+
+// Address variable `h1` margin within `section` and `article` contexts in Firefox 4+, Safari 5, and Chrome.
 h1
+  font-size: 5em
+
+h2
+  position: relative
+  left: -40px
+h3
+  font-weight: 400
+
+h1, h2
+  font-weight: 600
+
+h2, h3
   font-size: 2em
-  margin: 0.67em 0
+
+h1, h2, h3
+  line-height: 1em
+  margin: 0
+  text-align: center
+
 
 // Address styling not present in IE 8/9, Safari 5, and Chrome.
 abbr[title]
@@ -271,19 +299,10 @@ q
 small
   font-size: 80%
 
-// Prevent `sub` and `sup` affecting `line-height` in all browsers.
-sub, sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
-
-sup
-  top: -0.5em
-
-sub
-  bottom: -0.25em
-
+header
+  // font-family: 'Poiret One', cursive
+  // font-family: 'Rye', cursive
+  font-family: 'Riesling', cursive
 
 // www.subtlepatterns.com | edited Light Gray Floral Motif | http://www.graphicswall.com/
 //! normalize.css v2.1.1 | MIT License | git.io/normalize
