--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -194,6 +194,7 @@ audio:not([controls])
 // ~~~~~~~~~~LINKS~~~~~~~~~~
 
 a
+  color: $blue
   text-decoration: none
   // Address `outline` inconsistency between Chrome and other browsers.
   &:focus
