--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   background: #000064;
-  background: linear-gradient(to bottom, rgba(0, 0, 80, 0.8) 5%, white 50%), url("../img/wetsnow.png");
+  background: linear-gradient(to bottom, rgba(0, 0, 100, 0.8) 5%, white 50%), url("../img/wetsnow.png");
   padding-top: 60px; }
 
 header {
@@ -18,6 +18,7 @@ header {
   max-width: 500px;
   width: 50%; }
   header a {
+    background: white;
     background: url("../img/freshsnow.png"), linear-gradient(to bottom, white, white);
     border: 1px solid #000064;
     border-bottom-color: transparent;
@@ -27,18 +28,19 @@ header {
     padding: 20px 0; }
 
 .main {
+  background: white;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), white), url("../img/freshsnow.png");
   border-radius: 30px 30px 0 0;
   border-top: 1px solid rgba(0, 0, 100, 0.2);
   box-shadow: 0 -10px 50px -25px #000064;
-  height: 800px;
+  height: 400px;
   margin: 0 auto;
   width: 80%; }
 
 footer {
   background: url("../img/drawmount.png") bottom center no-repeat;
-  background-size: 100% auto;
-  height: 600px; }
+  background-size: 90% auto;
+  height: 250px; }
 
 .group {
   *zoom: 1; }
