--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -1,6 +1,7 @@
 // ~~~~~~~~~~BASE~~~~~~~~~~
 
 $blue: rgba(0, 0, 100, 1)
+$white: rgba(255, 255, 255, 1)
 
 html
   // Prevent system color scheme's background color being used in Firefox, IE, and Opera.
@@ -22,8 +23,8 @@ body
   
 
 .container
-  background: rgb(0, 0, 100)
-  background: linear-gradient(to bottom, rgba(0, 0, 80, .8) 5%, rgba(255, 255, 255, 1) 50%), url('../img/wetsnow.png')
+  background: $blue
+  background: linear-gradient(to bottom, fade-out($blue, .2) 5%, $white 50%), url('../img/wetsnow.png')
   padding-top: 60px
 
 header
@@ -32,8 +33,9 @@ header
   max-width: 500px
   width: 50%
   a
-    background: url('../img/freshsnow.png'), linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 1))
-    border: 1px solid rgb(0, 0, 100)
+    background: $white
+    background: url('../img/freshsnow.png'), linear-gradient(to bottom, $white, $white)
+    border: 1px solid $blue
     border-bottom-color: transparent
     border-radius: 30px 30px 0 0
     box-shadow: 0 -1px 50px 0 fade-out($blue, .2)
@@ -42,19 +44,20 @@ header
     // margin-bottom: -1px
 
 .main
-  background: linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(255, 255, 255, 1)),url('../img/freshsnow.png')
+  background: $white
+  background: linear-gradient(to bottom, fade-out($white, .9), $white), url('../img/freshsnow.png')
   border-radius: 30px 30px 0 0
   border-top: 1px solid fade-out($blue, .8)
   box-shadow: 0 -10px 50px -25px fade-out($blue, 0)
-  height: 800px
+  height: 400px
   margin: 0 auto
   // overflow: hidden
   width: 80%
 
 footer
   background: url('../img/drawmount.png') bottom center no-repeat
-  background-size: 100% auto
-  height: 600px
+  background-size: 90% auto
+  height: 250px
 
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
