--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,8 @@ body {
   margin: 0; }
 
 .container {
-  background: #000064;
-  background: linear-gradient(to bottom, rgba(0, 0, 100, 0.8) 5%, white 50%), url("../img/wetsnow.png");
+  background: #050a32;
+  background: linear-gradient(to bottom, #050a32 2%, rgba(5, 10, 50, 0.8) 12%, white 50%), url("../img/scales.png");
   padding-top: 60px; }
 
 header {
@@ -19,27 +19,27 @@ header {
   width: 50%; }
   header a {
     background: white;
-    background: url("../img/freshsnow.png"), linear-gradient(to bottom, white, white);
-    border: 1px solid #000064;
+    background: url("../img/feathers.png"), linear-gradient(to bottom, white, white);
+    border: 1px solid #050a32;
     border-bottom-color: transparent;
     border-radius: 30px 30px 0 0;
-    box-shadow: 0 -1px 50px 0 rgba(0, 0, 100, 0.8);
+    box-shadow: 0 -1px 50px 0 rgba(5, 10, 50, 0.8);
     display: block;
     padding: 20px 0; }
 
 .main {
   background: white;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), white), url("../img/freshsnow.png");
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), white), url("../img/feathers.png");
   border-radius: 30px 30px 0 0;
-  border-top: 1px solid rgba(0, 0, 100, 0.2);
-  box-shadow: 0 -10px 50px -25px #000064;
+  border-top: 1px solid rgba(5, 10, 50, 0.2);
+  box-shadow: 0 -10px 50px -25px #050a32;
   height: 400px;
   margin: 0 auto;
   width: 80%; }
 
 footer {
   background: url("../img/drawmount.png") bottom center no-repeat;
-  background-size: 90% auto;
+  background-size: 98% auto;
   height: 250px; }
 
 .group {
@@ -119,19 +119,19 @@ audio:not([controls]) {
   display: none; }
 
 a {
-  color: #000064;
+  color: #050a32;
   text-decoration: none; }
   a:focus {
     outline: thin dotted;
-    color: rgba(0, 0, 100, 0.5); }
+    color: rgba(5, 10, 50, 0.5); }
   a:active, a:hover {
     outline: 0; }
   a:active {
-    color: rgba(0, 0, 100, 0.5); }
+    color: rgba(5, 10, 50, 0.5); }
   a:hover {
-    color: rgba(0, 0, 100, 0.7); }
+    color: rgba(5, 10, 50, 0.7); }
   a:visited {
-    color: #000064; }
+    color: #050a32; }
 
 ul, ol, li {
   list-style: none;
