--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -1,6 +1,6 @@
 // ~~~~~~~~~~BASE~~~~~~~~~~
 
-$blue: rgba(5, 10, 50, 1)
+$blue: rgba(4, 8, 60, 1)
 $white: rgba(255, 255, 255, 1)
 $bkgrnd-lt: url('../img/feathers.png')
 $bkgrnd-dk: url('../img/scales.png')
@@ -34,23 +34,21 @@ header
   // margin-bottom: -1px
   max-width: 500px
   width: 50%
-  a
-    background: $white
-    background: $bkgrnd-lt, linear-gradient(to bottom, $white, $white)
-    border: 1px solid $blue
-    border-bottom-color: transparent
-    border-radius: 30px 30px 0 0
-    box-shadow: 0 -1px 50px 0 fade-out($blue, .2)
-    display: block
-    padding: 20px 0
-    // margin-bottom: -1px
+  background: $white
+  background: $bkgrnd-lt, linear-gradient(to bottom, $white, $white)
+  border: 1px solid $blue
+  border-bottom-color: transparent
+  border-radius: 30px 30px 0 0
+  box-shadow: 4px -1px 30px 0 fade-out($blue, .2), inset 2px 8px 14px -2px $white
+  display: block
+  padding: 20px 0
 
 .main
   background: $white
   background: linear-gradient(to bottom, fade-out($white, .9), $white), $bkgrnd-lt
   border-radius: 30px 30px 0 0
   border-top: 1px solid fade-out($blue, .8)
-  box-shadow: 0 -10px 50px -25px fade-out($blue, 0)
+  box-shadow: 10px -15px 50px -30px fade-out($blue, 0), inset 2px 8px 14px -2px $white
   height: 400px
   margin: 0 auto
   // overflow: hidden
@@ -60,6 +58,7 @@ footer
   background: url('../img/drawmount.png') bottom center no-repeat
   background-size: 98% auto
   height: 250px
+
 
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
@@ -238,7 +237,6 @@ table
 
 // ~~~~~~~~~~TYPOGRAPHY~~~~~~~~~~
 
-
 @font-face
   font-family: 'Riesling'
   src: url('../fonts/riesling.ttf')
@@ -309,6 +307,12 @@ header
   // font-family: 'Poiret One', cursive
   // font-family: 'Rye', cursive
   font-family: 'Riesling', cursive
+
+.press-heavy
+  text-shadow: 1px 1px 0px $white, -1px -1px 1px fade-out($blue, .6)
+
+.press-light
+  text-shadow: 1px 1px 0px $white
 
 // www.subtlepatterns.com | edited Light Gray Floral Motif | http://www.graphicswall.com/
 //! normalize.css v2.1.1 | MIT License | git.io/normalize
