--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,6 @@ header {
   border-radius: 30px 30px 0 0;
   border-top: 1px solid rgba(4, 8, 60, 0.2);
   box-shadow: 10px -15px 50px -30px #04083c, inset 2px 8px 14px -2px white;
-  height: 400px;
   margin: 0 auto;
   width: 80%; }
 
@@ -40,6 +39,12 @@ footer {
   background: url("../img/drawmount.png") bottom center no-repeat;
   background-size: 98% auto;
   height: 250px; }
+
+.hide {
+  display: none; }
+
+.nav li {
+  float: left; }
 
 .group {
   *zoom: 1; }
