--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -49,7 +49,7 @@ header
   border-radius: 30px 30px 0 0
   border-top: 1px solid fade-out($blue, .8)
   box-shadow: 10px -15px 50px -30px fade-out($blue, 0), inset 2px 8px 14px -2px $white
-  height: 400px
+  // height: 400px
   margin: 0 auto
   // overflow: hidden
   width: 80%
@@ -59,6 +59,15 @@ footer
   background-size: 98% auto
   height: 250px
 
+.hide
+  display: none
+
+
+// ~~~~~~~~~~NAVIGATION~~~~~~~~~~
+
+.nav
+  li
+    float: left
 
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
