--- a/styles/main.css
+++ b/styles/main.css
@@ -10,21 +10,22 @@ body {
 
 .container {
   background: #04083c;
-  background: linear-gradient(to bottom, #04083c 2%, rgba(4, 8, 60, 0.8) 12%, white 50%), url("../img/scales.png");
+  background: linear-gradient(to bottom, #04083c 2%, rgba(4, 8, 60, 0.8) 12%, white 50%), url("../img/scalesdrk.png");
   padding-top: 60px; }
 
 header {
-  margin: 0 auto;
-  max-width: 500px;
-  width: 50%;
   background: white;
   background: url("../img/feathers.png"), linear-gradient(to bottom, white, white);
   border: 1px solid #04083c;
   border-bottom-color: transparent;
   border-radius: 30px 30px 0 0;
   box-shadow: 4px -1px 30px 0 rgba(4, 8, 60, 0.8), inset 2px 8px 14px -2px white;
+  color: #04083c;
   display: block;
-  padding: 20px 0; }
+  padding: 1.5em 3%;
+  margin: 0 auto;
+  max-width: 500px;
+  width: 50%; }
 
 .main {
   background: white;
@@ -33,7 +34,8 @@ header {
   border-top: 1px solid rgba(4, 8, 60, 0.2);
   box-shadow: 10px -15px 50px -30px #04083c, inset 2px 8px 14px -2px white;
   margin: 0 auto;
-  width: 80%; }
+  padding: 5%;
+  width: 75%; }
 
 footer {
   background: url("../img/drawmount.png") bottom center no-repeat;
@@ -127,15 +129,16 @@ a {
   text-decoration: none; }
   a:focus {
     outline: thin dotted;
+    color: #1c2bf0;
     color: rgba(4, 8, 60, 0.5); }
   a:active, a:hover {
     outline: 0; }
   a:active {
-    color: rgba(4, 8, 60, 0.5); }
+    color: #0e1bcb;
+    color: rgba(4, 8, 60, 0.6); }
   a:hover {
+    color: #0a159c;
     color: rgba(4, 8, 60, 0.7); }
-  a:visited {
-    color: #04083c; }
 
 ul, ol, li {
   list-style: none;
@@ -167,31 +170,22 @@ h2, h3 {
   font-size: 2em; }
 
 h1, h2, h3 {
-  line-height: 1em;
   margin: 0;
   text-align: center; }
 
-abbr[title] {
-  border-bottom: 1px dotted; }
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1em; }
+
+header {
+  font-family: "Riesling", cursive; }
 
 b, strong {
   font-weight: bold; }
-
-dfn {
-  font-style: italic; }
 
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
-
-mark {
-  background: yellow;
-  color: black; }
-
-code, kbd, pre, samp {
-  font-family: monospace, serif;
-  font-size: 1em; }
 
 pre {
   white-space: pre-wrap; }
@@ -202,11 +196,8 @@ q {
 small {
   font-size: 80%; }
 
-header {
-  font-family: "Riesling", cursive; }
-
 .press-heavy {
-  text-shadow: 1px 1px 0px white, -1px -1px 1px rgba(4, 8, 60, 0.4); }
+  text-shadow: 1px 1px 2px white, -1px -1px 1px rgba(2, 5, 36, 0.8); }
 
 .press-light {
-  text-shadow: 1px 1px 0px white; }
+  text-shadow: 1px 1px 1px white; }
