--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -19,6 +19,8 @@ html
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
 
+a
+  transition: all .25s ease-in-out
 
 body
   color: $blue
@@ -26,7 +28,7 @@ body
    
 .container
   background: $blue
-  background: linear-gradient(to bottom, fade-out($blue, 0) 2%, fade-out($blue, .2) 6%, fade-out($blue, .6) 10%, $white 60%), $bkgrnd-dk
+  background: linear-gradient(to bottom, fade-out($blue, 0) 2%, fade-out($blue, .2) 6%, fade-out($blue, .4) 12%, $white 60%), $bkgrnd-dk
   padding-top: 60px
 
 header
@@ -48,7 +50,7 @@ header
   background: linear-gradient(to bottom, fade-out($white, .9), $white), $bkgrnd-lt
   border-radius: 30px 30px 0 0
   border-top: 1px solid fade-out($blue, .8)
-  box-shadow: 5px -25px 25px -30px fade-out($blue, 0), inset 2px 8px 14px -2px $white
+  box-shadow: 0 -25px 30px -35px fade-out($blue, 0), inset 2px 8px 14px -2px $white
   margin: 0 auto
   max-width: 1280px
   // overflow: hidden
@@ -58,8 +60,8 @@ header
 footer
   background: url('../img/drawmount.png') bottom center no-repeat
   background-size: 98% auto
-  height: 250px
-
+  height: 40%
+  min-height: 250px
 
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
