--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -2,6 +2,7 @@
 
 $blue: rgba(4, 8, 60, 1)
 $white: rgba(255, 255, 255, 1)
+$red: rgba(90, 0, 20, 1)
 $bkgrnd-lt: url('../img/feathers.png')
 $bkgrnd-dk: url('../img/scalesdrk.png')
 
@@ -67,13 +68,16 @@ footer
 
 .nav
   padding-left: .1em
+  margin-bottom: 4em
   li
     float: left
     & a
       padding-right: .1em
     & a:after
+      color: $red
       content: ' }'
     & a:before
+      color: $red
       content: '{ '
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
@@ -261,7 +265,7 @@ table
   font-family: "Caslon Antique"
   src: url('../fonts/caslon-antique.ttf')
 
-h1, h4
+h1
   font-size: 5em
 
 h2
@@ -270,7 +274,16 @@ h2
 h3
   font-weight: 400
 
-h1, h2
+h4
+  color: $red
+  font-size: 3.5em
+  text-align: center
+
+h5
+  color: $red
+  font-size: 2.8em
+
+h1, h2, h5
   font-weight: 600
 
 h2, h3
@@ -283,13 +296,16 @@ h1, h2, h3
 h1, h2, h3, h4, h5, h6
   line-height: 1em
 
+h4, h5, h6
+  margin: .5em 0 0 0 
+
 .nav, h4
   font-family: "Caslon Antique"
 
 .nav
   font-size: 1.5em
 
-header
+header, h5
   // font-family: 'Poiret One', cursive
   // font-family: 'Rye', cursive
   font-family: 'Riesling', cursive
