added new font for test to add similarity to potential invites

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -265,8 +265,12 @@ table
   font-family: "Caslon Antique"
   src: url('../fonts/caslon-antique.ttf')
 
+@font-face  
+  font-family: "Treasury Platinum"
+  src: url('../fonts/treasury-platinum.ttf')
+
 h1
-  font-size: 5em
+  font-size: 4em
 
 h2
   position: relative
@@ -288,13 +292,15 @@ h1, h2, h5
 
 h2, h3
   font-size: 2em
+  font-family: 'Riesling', cursive
 
 h1, h2, h3
   margin: 0
   text-align: center
 
 h1, h2, h3, h4, h5, h6
-  line-height: 1em
+  //line-height: 1em
+  font-weight: 400
 
 h4, h5, h6
   margin: .5em 0 0 0 
@@ -308,7 +314,8 @@ h4, h5, h6
 header, h5
   // font-family: 'Poiret One', cursive
   // font-family: 'Rye', cursive
-  font-family: 'Riesling', cursive
+  //font-family: 'Riesling', cursive
+  font-family: 'Treasury Platinum', cursive
 
 // Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
 b, strong
