--- a/styles/main.css
+++ b/styles/main.css
@@ -170,8 +170,12 @@ table {
   font-family: "Caslon Antique";
   src: url("../fonts/caslon-antique.ttf"); }
 
+@font-face {
+  font-family: "Treasury Platinum";
+  src: url("../fonts/treasury-platinum.ttf"); }
+
 h1 {
-  font-size: 5em; }
+  font-size: 4em; }
 
 h2 {
   position: relative;
@@ -193,14 +197,15 @@ h1, h2, h5 {
   font-weight: 600; }
 
 h2, h3 {
-  font-size: 2em; }
+  font-size: 2em;
+  font-family: "Riesling", cursive; }
 
 h1, h2, h3 {
   margin: 0;
   text-align: center; }
 
 h1, h2, h3, h4, h5, h6 {
-  line-height: 1em; }
+  font-weight: 400; }
 
 h4, h5, h6 {
   margin: 0.5em 0 0 0; }
@@ -212,7 +217,7 @@ h4, h5, h6 {
   font-size: 1.5em; }
 
 header, h5 {
-  font-family: "Riesling", cursive; }
+  font-family: "Treasury Platinum", cursive; }
 
 b, strong {
   font-weight: bold; }
